--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{font-family:'Times New Roman', Times, serif;
-    background: color #8d58ca;
+    background-color:  #8d58ca;
     margin:0;
     padding:0;
     display:flex;
@@ -8,23 +8,32 @@ body{font-family:'Times New Roman', Times, serif;
     height:100vh;
 }
 .container{
-    background-color:rgb(219, 197, 197);
+    background-color: rgb(219, 197, 197);
     border-radius: 8px;
-    box-shadow: 0px 10px rgba((0,0,0,0.1));
+    box-shadow: 0px 10px rgba(0,0,0,0.1);
     padding: 30px;
     width: 350px;
 }
 h2{
     text-align:center;
-    color:black
+    color: black
 }
-input[type="text"],[type="password"]
+input[type="text"],[type="password"] {
+width: 100%; 
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
 button{
-    background-color:rgb(64, 194, 74);
-    color:white;
-    background:none;
-    cursor:pointer;
+    background-color: rgb(64, 194, 74);
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    width: 100%;  
+    cursor: pointer;
+    border-radius: 4px;  
 }
 button:hover{
-    background-color:#d9ff00
+    background-color: #d9ff00
 }
